old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: growi-ingress
  annotations:
    cert-manager.io/cluster-issuer: le-cf-prod
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: wiki.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000
  tls:
    - hosts:
        - wiki.uniproject.jp
      secretName: wiki-tls
